# rs-arrow2ipc2file

./: Cargo.toml  README.md
examples/arrow2ipc2file/: Cargo.toml  arrow2ipc2file  arrow2ipc2file.wasm  run.sh
examples/arrow2ipc2file/src/: main.rs
src/: lib.rs
